[package]
name = "template"
edition = "2021"
version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
anyhow.workspace = true
educe.workspace = true
once_cell.workspace = true
thiserror.workspace = true
